# msteams-cards

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
msteams_cards/: __init__.py  _adaptivecard.py  _connector.py  containers.py  elements.py  styles.py
tests/: test_message.py
