[tool.poetry]
name = "msteams-cards"
version = "0.1.0"
description = "Send adaptive cards to Microsoft Teams"
authors = ["Elisiário Couto <elisiario@couto.io>"]
readme = "README.md"
packages = [{ include = "msteams_cards" }]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Topic :: Office/Business",
    "Topic :: Office/Business :: Groupware",
]
repository = "https://github.com/elisiariocouto/msteams-cards"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pydantic = "^2.5.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.1.7"
pytest = "^7.4.3"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-lenght = 88

[tool.ruff]
ignore = ["E501", "B008", "B006"]
extend-select = ["B", "C4", "PIE", "T20", "SIM", "TCH"]

[tool.ruff.per-file-ignores]
"tests/*" = ["T201", "PIE804", "SIM115"]
"scripts/*" = ["T201"]
